--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+/*.iml
+.idea/
+
 *.class
 
 # Mobile Tools for Java (J2ME)
